found 1 wishlist bug with the css due to overlapping class names.

--- a/styles/wishlist.css
+++ b/styles/wishlist.css
@@ -395,7 +395,7 @@ footer .cols .links-col a i {
   background-color: #ff8e72;
 }
 
-.error-message {
+.error-message-games {
   color: #94685b;
   font-size: 1.5rem;
   font-weight: 500;
